# hierarchical-rag-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: chunks.json  document_tree.json  labeled_blocks.json
src/: chunker.py  layout_classifier.py  main.py  models.py  pdf_parser.py  structure_builder.py
tests/: test_chunker.py  test_layout_classifier.py  test_pdf_parser.py  test_structure_builder.py
